# AI_Oversight_Framework

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
docs/: architecture.md
examples/: README.md  simple_dag_example.py
oversight/: __init__.py  context_pack_manager.py  control_signal_aggregator.py  determinism_harness.py  generator_editor_split.py  human_factors_engine.py  ingress_normalizer.py  intent_router.py  ownership.py  policy_gatekeeper.py  retrieval_verification_layer.py  safety_regulation_module.py  sentiment_approval_disambiguator.py  spec_chapter_compiler.py  telemetry_audit_trail.py  tool_orchestrator.py
