[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-oversight-framework"
version = "0.1.0"
description = "Modular, deterministic oversight framework for multi-agent swarms: intent routing, behavioral ownership tracking, safety gates, auditable DAG trails."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Andrew", email = "" }]
keywords = ["ai-safety", "multi-agent", "oversight", "orchestration", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["oversight*"]
